Enables users to save generated template as JSON
Adds functionality for users to save the generated template data as a JSON file.

This allows for easy storage and reuse of template definitions.
A "Save as JSON" button is added and enabled after the template is generated.
The button triggers a download of a JSON file containing the template structure with comments.

--- a/templates/index.html
+++ b/templates/index.html
@@ -78,6 +78,7 @@
                             <input type="radio" name="template-section" value="B"> Section B Only
                         </label>
                         <button id="generate-template-btn" class="btn btn-primary">Generate Template</button>
+                        <button id="save-template-json-btn" class="btn btn-secondary" disabled>Save as JSON</button>
                     </div>
                     <div id="template-output"></div>
                 </div>
